--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h2 id="拓扑">拓扑 </h2>
 <ul>
 <li><a href="https://luckychen666666.github.io/mybook/Topology/Munkres-Topology-HD.pdf" target="_blank">Topology</a> (James Munkres)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Topology/Topology-A_Categorical_Approach.pdf" target="_blank">Topology</a> (Tai-Danae Bradley, Tyler Bryson, John Terilla)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Topology/Topology-A_Categorical_Approach.pdf" target="_blank">Topology: A Categorical Approach</a> (Tai-Danae Bradley, Tyler Bryson, John Terilla)</li>
 </ul>
 <h2 id="范畴">范畴 </h2>
 <ul>
