--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </ul>
 </li>
 <li><a href="https://luckychen666666.github.io/mybook/Geometry/Differential_Geometry_Connections_Curvature_and_Characteristic_Classes.pdf" target="_blank">Differential Geometry: Connections, Curvature, and Characteristic Classes</a> (Loring W. Tu)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Geometry/Manifolds_Vector_Fields_and_Differential_Forms-3.pdf" target="_blank">Manifolds, Vector Fields and Differential Forms (-3)</a> (Gal Gross • Eckhard Meinrenken)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Manifolds_Vector_Fields_and_Differential_Forms-3.pdf" target="_blank">Manifolds, Vector Fields and Differential Forms (-3)</a> (Gal Gross, Eckhard Meinrenken)</li>
 </ul>
 <h2 id="拓扑">拓扑 </h2>
 <ul>
