--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li><a href="https://luckychen666666.github.io/mybook/Algebra/Errata_for_Algebra_Chapter-0.pdf" target="_blank">Algebra: Chapter 0 更正</a></li>
 </ul>
 </li>
+<li><a href="https://luckychen666666.github.io/mybook/Algebra/Algebra_with_Galois_Theory-Emil_Artin.pdf" target="_blank">Algebra with Galois Theory</a> (Emil Artin)
 </ul>
 <h2 id="几何">几何 </h2>
 <ul>
