--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 <li><a href="https://luckychen666666.github.io/mybook/Geometry/Errata_for_An_Introduction_to_Manifolds-Tu.pdf" target="_blank">An Introduction to Manifolds 2th 更正</a></li>
 </ul>
 </li>
-<li><a href="https://luckychen666666.github.io/mybook/Geometry/Differential_Geometry_Connections_Curvature_and_Characteristic_Classes.pdf" target="_blank">Differential Geometry: Connections, Curvature, and Characteristic Classes</a> (Loring W. Tu)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Differential Geometry-Connections, Curvature, and Characteristic Classes (Loring W. Tu) GTM275.pdf" target="_blank">Differential Geometry-Connections, Curvature, and Characteristic Classes (GTM275)</a> (Loring W. Tu)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Introduction to Smooth Manifolds (John M. Lee) GTM218.pdf" target="_blank">Introduction to Smooth Manifolds (GTM218)</a> (John M. Lee)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Introduction to Topological Manifolds (John M. Lee) GTM202.pdf" target="_blank">Introduction to Topological Manifolds (GTM202)</a> (John M. Lee)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Introduction to Riemannian Manifolds (John M. Lee) GTM176.pdf" target="_blank">Introduction to Riemannian Manifolds (GTM176)
+</a> (John M. Lee)</li>
 </ul>
 <h2 id="拓扑">拓扑 </h2>
 <ul>
