--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </ul>
 </li>
 <li><a href="https://luckychen666666.github.io/mybook/Algebra/Algebra_with_Galois_Theory-Emil_Artin.pdf" target="_blank">Algebra with Galois Theory</a> (Emil Artin)
-<li><a href="https://luckychen666666.github.io/mybook/Algebra/Lie Groups, Lie Algebras, and Representations (Brian C. Hall) GTM222.pdf" target="_blank">Algebra with Galois Theory</a> (Brian C. Hall)
+<li><a href="https://luckychen666666.github.io/mybook/Algebra/Lie Groups, Lie Algebras, and Representations (Brian C. Hall) GTM222.pdf" target="_blank">Lie Groups, Lie Algebras, and Representations</a> (Brian C. Hall)
 </ul>
 <h2 id="几何">几何 </h2>
 <ul>
