--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
       
 <h2 id="分析">分析 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Analysis/Real_and_Complex_Analysis-Rudin.pdf" target="_blank">Real and Complex Analysis</a> (Rudin)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Analysis/Functional_Analysis_Sobolev_Spaces_and_Partial_Differential_Equations-Haim_Brezis.pdf" target="_blank">Functional Analysis, Sobolev Spaces and Partial Differential Equations</a> (Haim Brezis)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Analysis/Analysis_I-Tao.pdf" target="_blank">Analysis I</a> (Terence Tao)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Analysis/Analysis_II-Tao.pdf" target="_blank">Analysis II</a> (Terence Tao)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Analysis/泛函分析讲义.pdf" target="_blank">泛函分析讲义</a> (许全华, 马涛, 尹智)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Analysis/Real and Complex Analysis (Rudin).pdf" target="_blank">Real and Complex Analysis</a> (Rudin)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Analysis/Functional Analysis, Sobolev Spaces and Partial Differential Equations (Haim Brezis).pdf" target="_blank">Functional Analysis, Sobolev Spaces and Partial Differential Equations</a> (Haim Brezis)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Analysis/Analysis I (Tao).pdf" target="_blank">Analysis I</a> (Terence Tao)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Analysis/Analysis II (Tao).pdf" target="_blank">Analysis II</a> (Terence Tao)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Analysis/泛函分析讲义 (许全华, 马涛, 尹智).pdf" target="_blank">泛函分析讲义</a> (许全华, 马涛, 尹智)</li>
 </ul>
 <h2 id="代数">代数 </h2>
 <ul>
 <li><a href="https://luckychen666666.github.io/mybook/Algebra/Algebra_Chapter-0.pdf" target="_blank">Algebra: Chapter 0</a> (Paolo Aluffi)
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Algebra/Errata_for_Algebra_Chapter-0.pdf" target="_blank">Algebra: Chapter 0 更正</a></li>
+<li><a href="https://luckychen666666.github.io/mybook/Algebra/Errata for Algebra-Chapter 0.pdf" target="_blank">Algebra: Chapter 0 更正</a></li>
 </ul>
 </li>
-<li><a href="https://luckychen666666.github.io/mybook/Algebra/Algebra_with_Galois_Theory-Emil_Artin.pdf" target="_blank">Algebra with Galois Theory</a> (Emil Artin)
+<li><a href="https://luckychen666666.github.io/mybook/Algebra/Algebra with Galois Theory (Emil Artin).pdf" target="_blank">Algebra with Galois Theory</a> (Emil Artin)
 <li><a href="https://luckychen666666.github.io/mybook/Algebra/Lie Groups, Lie Algebras, and Representations (Brian C. Hall) GTM222.pdf" target="_blank">Lie Groups, Lie Algebras, and Representations (GTM222)</a> (Brian C. Hall)
 <li><a href="https://luckychen666666.github.io/mybook/Algebra/An Introduction to Homological Algebra (Joseph J. Rotman).pdf" target="_blank">An Introduction to Homological Algebra</a> (Joseph J. Rotman)
 </ul>
 <h2 id="几何">几何 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Geometry/An_Introduction_to_Manifolds-Tu.pdf" target="_blank">An Introduction to Manifolds</a> (Loring W. Tu)
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/An Introduction to Manifolds (Loring W. Tu).pdf" target="_blank">An Introduction to Manifolds</a> (Loring W. Tu)
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Geometry/Errata_for_An_Introduction_to_Manifolds-Tu.pdf" target="_blank">An Introduction to Manifolds 2th 更正</a></li>
+<li><a href="https://luckychen666666.github.io/mybook/Geometry/Errata for An Introduction to Manifolds (Loring W. Tu).pdf" target="_blank">An Introduction to Manifolds 2th 更正</a></li>
 </ul>
 </li>
 <li><a href="https://luckychen666666.github.io/mybook/Geometry/Differential Geometry-Connections, Curvature, and Characteristic Classes (Loring W. Tu) GTM275.pdf" target="_blank">Differential Geometry-Connections, Curvature, and Characteristic Classes (GTM275)</a> (Loring W. Tu)</li>
@@ -59,21 +59,21 @@
 </ul>
 <h2 id="拓扑">拓扑 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Topology/Munkres-Topology-HD.pdf" target="_blank">Topology</a> (James Munkres)</li>
-<li><a href="https://luckychen666666.github.io/mybook/Topology/Topology-A_Categorical_Approach.pdf" target="_blank">Topology: A Categorical Approach</a> (Tai-Danae Bradley, Tyler Bryson, John Terilla)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Topology/Topology (Munkres)-HD.pdf" target="_blank">Topology</a> (James R. Munkres)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Topology/Topology-A Categorical Approach (Tai-Danae Bradley, Tyler Bryson, John Terilla).pdf" target="_blank">Topology: A Categorical Approach</a> (Tai-Danae Bradley, Tyler Bryson, John Terilla)</li>
 <li><a href="https://luckychen666666.github.io/mybook/Topology/Algebraic topology (Hatcher).pdf" target="_blank">Algebraic Topology </a> (Hatcher)</li>
 </ul>
 <h2 id="范畴">范畴 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Category/Basic_Category_Theory.pdf" target="_blank">Basic Category Theory</a> (Tom Leinster)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Category/Basic Category Theory (Tom Leinster).pdf" target="_blank">Basic Category Theory</a> (Tom Leinster)</li>
 </ul>
 <h2 id="方程">方程 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Equation/PDE/Partial_Differential_Equations-Evans.pdf" target="_blank">Partial Differential Equations</a> (Evans)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Equation/PDE/Partial Differential Equations (Evans).pdf" target="_blank">Partial Differential Equations</a> (Evans)</li>
 </ul>
 <h2 id="数学写作">数学写作 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Writing/数学之英文写作(汤涛, 丁玖).pdf" target="_blank">数学之英文写作 </a> (汤涛, 丁玖)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Writing/数学之英文写作 (汤涛, 丁玖).pdf" target="_blank">数学之英文写作 </a> (汤涛, 丁玖)</li>
 </ul>
 
       </div>
