--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <ul>
 <li><a href="https://luckychen666666.github.io/mybook/Equation/PDE/Partial Differential Equations (Evans).pdf" target="_blank">Partial Differential Equations</a> (Evans)</li>
 </ul>
-<h2 id="数学写作">数学写作 </h2>
+<h2 id="其他">其他 </h2>
 <ul>
-<li><a href="https://luckychen666666.github.io/mybook/Writing/数学之英文写作 (汤涛, 丁玖).pdf" target="_blank">数学之英文写作 </a> (汤涛, 丁玖)</li>
+<li><a href="https://luckychen666666.github.io/mybook/Others/数学之英文写作 (汤涛, 丁玖).pdf" target="_blank">数学之英文写作 </a> (汤涛, 丁玖)</li>
 </ul>
 
       </div>
