--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     </div>
     
     <div class="footer">
-        <p>数学教材电子版书库 | 最后更新: 2023年</p>
+        <!-- <p>数学教材电子版书库 | 最后更新: 2023年</p> -->
         <p>所有书籍版权归原作者及出版社所有，本页面仅作整理与索引</p>
     </div>
     
