--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <li class="book-item">
                     <a href="https://luckychen666666.github.io/mybook/Geometry/Differential Geometry-Connections, Curvature, and Characteristic Classes (Loring W. Tu) GTM275.pdf" target="_blank" class="book-link">
                         <i class="fas fa-book"></i>
-                        <span class="book-title">Differential Geometry-Connections, Curvature, and Characteristic Classes (GTM275)</span>
+                        <span class="book-title">Differential Geometry: Connections, Curvature, and Characteristic Classes (GTM275)</span>
                         <span class="book-author">(Loring W. Tu)</span>
                     </a>
                 </li>
