--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数学教材电子版</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="https://cdn.img2ipfs.com/ipfs/QmQz3WfWHrc1o4KcTBF4SDXCrtUnigqpqofKwiU5T6Z2ud?filename=%E5%B7%9D%E5%A4%A7logo.svg" type="image/svg+xml">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/LuckyChen666666/MyImage@main/202512281431883.svg" type="image/svg+xml">
     <style>
         /* 基础样式重置 */
         * {
