--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数学教材电子版</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/LuckyChen666666/MyImage@main/202512281431883.svg" type="image/svg+xml">
+    <!-- 在原来的基础上添加版本参数强制刷新 -->
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/LuckyChen666666/MyImage@main/202512281451373.png" type="image/svg+xml">
     <style>
         /* 基础样式重置 */
         * {
