--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <a href="https://luckychen666666.github.io/mybook/Analysis/Real and Complex Analysis (Rudin).pdf" target="_blank" class="book-link">
                         <i class="fas fa-book"></i>
                         <span class="book-title">Real and Complex Analysis</span>
-                        <span class="book-author">(Rudin)</span>
+                        <span class="book-author">(Walter Rudin)</span>
                     </a>
                 </li>
                 <li class="book-item">
@@ -442,7 +442,7 @@
                     <a href="https://luckychen666666.github.io/mybook/Topology/Algebraic topology (Hatcher).pdf" target="_blank" class="book-link">
                         <i class="fas fa-book"></i>
                         <span class="book-title">Algebraic Topology</span>
-                        <span class="book-author">(Hatcher)</span>
+                        <span class="book-author">(Allen Hatcher)</span>
                     </a>
                 </li>
             </ul>
@@ -480,7 +480,7 @@
                     <a href="https://luckychen666666.github.io/mybook/Equation/PDE/Partial Differential Equations (Evans).pdf" target="_blank" class="book-link">
                         <i class="fas fa-book"></i>
                         <span class="book-title">Partial Differential Equations</span>
-                        <span class="book-author">(Evans)</span>
+                        <span class="book-author">(Lawrence C. Evans)</span>
                     </a>
                 </li>
             </ul>
